# alcep_dfa

./: README.md  main.py  pyproject.toml  requirements.txt
alcep_dfa/: AllDFACorrections.py  ApplyCorrection.py  Constants.py  Corrections.py  GetCorrection.py  __init__.py
alcep_dfa/Nodes/: EditNode.py  EndNode.py  ForestNode.py  PackedNode.py  SymbolNode.py  __init__.py
alcep_dfa/Nodes/EditOperations/: AddNewState.py  AddTransition.py  EditOperation.py  LeaveInitial.py  LeaveTransition.py  MarkAsInitial.py  MarkStateAsFinal.py  MarkStateAsNonFinal.py  RemoveMarkAsInitial.py  RemoveTransition.py  __init__.py
alcep_dfa/Visitors/: __init__.py  get_all_edits.py  get_number_of_corrections.py  min_correction_visitor.py  min_costs_computation_visitor.py  shrink_to_allowed_mappings.py  shrink_to_minimal_corrections.py  shrink_to_minimal_dfa.py  visitor.py
runtime_tests/: homework.py
tests/: TextALCEPDFA.py
